--- a/requirements.txt
+++ b/requirements.txt
@@ -1,68 +1,41 @@
-aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
-aiohttp==3.12.15
+aiohttp==3.13.0
 aiosignal==1.4.0
 aiosqlite==0.21.0
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.11.0
 attrs==25.4.0
-audioop-lts==0.2.2
 banks==2.2.0
 beautifulsoup4==4.14.2
 blinker==1.9.0
-blis==1.3.0
 bm25s==0.2.14
-Brotli==1.1.0
 cachetools==6.2.0
-catalogue==2.0.10
 certifi==2025.10.5
 charset-normalizer==3.4.3
 click==8.3.0
-cloudpathlib==0.23.0
-cohere==5.18.0
 colorama==0.4.6
-confection==0.1.5
 contourpy==1.3.3
 cycler==0.12.1
-cymem==2.0.11
 dataclasses-json==0.6.7
 defusedxml==0.7.1
 Deprecated==1.2.18
 dirtyjson==1.0.8
 distro==1.9.0
-fastapi==0.118.2
-fastavro==1.12.0
-ffmpy==0.6.2
-filelock==3.19.1
+dotenv==0.9.9
 filetype==1.2.0
 fonttools==4.60.1
 frozenlist==1.8.0
 fsspec==2025.9.0
 gitdb==4.0.12
 GitPython==3.1.45
-google-ai-generativelanguage==0.6.15
-google-api-core==2.25.2
-google-api-python-client==2.184.0
 google-auth==2.41.1
-google-auth-httplib2==0.2.0
-google-genai==1.41.0
-google-generativeai==0.8.5
-googleapis-common-protos==1.70.0
-gradio==5.49.1
-gradio_client==1.13.3
+google-genai==1.42.0
 greenlet==3.2.4
 griffe==1.14.0
-groovy==0.1.2
-grpcio==1.75.1
-grpcio-status==1.71.2
 h11==0.16.0
-hf-xet==1.1.10
 httpcore==1.0.9
-httplib2==0.31.0
 httpx==0.28.1
-httpx-sse==0.4.0
-huggingface-hub==0.35.3
 idna==3.10
 Jinja2==3.1.6
 jiter==0.11.0
@@ -70,36 +43,26 @@ joblib==1.5.2
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 kiwisolver==1.4.9
-langcodes==3.5.0
-language_data==1.3.0
 llama-cloud==0.1.35
 llama-cloud-services==0.6.54
 llama-index==0.14.4
 llama-index-cli==0.5.3
 llama-index-core==0.14.4
-llama-index-embeddings-gemini==0.4.1
 llama-index-embeddings-google-genai==0.3.1
 llama-index-embeddings-openai==0.5.1
 llama-index-indices-managed-llama-cloud==0.9.4
 llama-index-instrumentation==0.4.1
-llama-index-llms-cohere==0.6.1
-llama-index-llms-gemini==0.6.1
 llama-index-llms-google-genai==0.6.2
-llama-index-llms-openai==0.5.6
-llama-index-postprocessor-cohere-rerank==0.5.1
+llama-index-llms-openai==0.6.4
 llama-index-readers-file==0.5.4
 llama-index-readers-llama-parse==0.5.1
 llama-index-retrievers-bm25==0.6.5
-llama-index-workflows==2.6.0
+llama-index-workflows==2.7.1
 llama-parse==0.6.54
-marisa-trie==1.3.1
-markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 marshmallow==3.26.1
 matplotlib==3.10.7
-mdurl==0.1.2
-multidict==6.6.4
-murmurhash==1.0.13
+multidict==6.7.0
 mypy_extensions==1.1.0
 narwhals==2.7.0
 nest-asyncio==1.6.0
@@ -107,75 +70,49 @@ networkx==3.5
 nltk==3.9.2
 numpy==2.3.3
 openai==1.109.1
-orjson==3.11.3
 packaging==25.0
 pandas==2.2.3
-pillow==10.4.0
-platformdirs==4.4.0
-preshed==3.0.10
-propcache==0.4.0
-proto-plus==1.26.1
-protobuf==5.29.5
+pillow==11.3.0
+platformdirs==4.5.0
+propcache==0.4.1
+protobuf==6.32.1
 pyarrow==21.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
-pydantic==2.11.10
-pydantic_core==2.33.2
+pydantic==2.12.0
+pydantic_core==2.41.1
 pydeck==0.9.1
-pydub==0.25.1
-Pygments==2.19.2
 pyparsing==3.2.5
 pypdf==6.1.1
 PyStemmer==2.2.0.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
-python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.3
 referencing==0.36.2
 regex==2025.9.18
 requests==2.32.5
-rich==14.1.0
 rpds-py==0.27.1
 rsa==4.9.1
-ruff==0.14.0
-safehttpx==0.1.6
 scipy==1.16.2
-semantic-version==2.10.0
 setuptools==80.9.0
-shellingham==1.5.4
 six==1.17.0
-smart_open==7.3.1
 smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.8
-spacy==3.8.7
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
 SQLAlchemy==2.0.43
-srsly==2.5.1
-starlette==0.48.0
 streamlit==1.50.0
 striprtf==0.0.26
 tenacity==9.1.2
-thinc==8.3.6
-tiktoken==0.11.0
-tokenizers==0.22.1
+tiktoken==0.12.0
 toml==0.10.2
-tomlkit==0.13.3
 tornado==6.5.2
 tqdm==4.67.1
-typer==0.19.2
-types-requests==2.32.4.20250913
 typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
-uritemplate==4.2.0
 urllib3==2.5.0
-uvicorn==0.37.0
-wasabi==1.1.3
-weasel==0.4.1
 websockets==15.0.1
 wrapt==1.17.3
 yarl==1.22.0
